# CarCar

./: .gitignore  Figure8.csv  Figure8.xlsx  Figure8_spaced10.csv  Figure8_spaced30.xlsx  HarCar.py  HarCarOrbSlam.yaml  HarCarThreaded.py  README.md  followPath.py  harcar.urdf  harcar_rviz_config.rviz  motion_measurements.xlsx  serialTest.py  serialTest2.py
arduino/: ultrasonic_ros_multi.ino
harcar_catkin_ws/launch/: startup.launch
harcar_catkin_ws/src/: README.md
harcar_catkin_ws/src/car_control_node/: CMakeLists.txt  HarCarThreaded.py  HarCarThreaded_OLD.py  car_control_node.py  package.xml
harcar_catkin_ws/src/car_control_node/launch/: car_control_node.launch
harcar_catkin_ws/src/follow_path_node/: CMakeLists.txt  follow_path_node.py  package.xml
harcar_catkin_ws/src/follow_path_node/launch/: follow_path_node.launch
harcar_catkin_ws/src/harcar_msgs/: CMakeLists.txt  package.xml
harcar_catkin_ws/src/harcar_msgs/msg/: CarControl.msg
harcar_catkin_ws/src/load_path_node/: CMakeLists.txt  load_path.py  package.xml  setup.py
harcar_catkin_ws/src/load_path_node/launch/: load_path_node.launch
harcar_catkin_ws/src/record_path_node/: CMakeLists.txt  package.xml  record_path_node.py  setup.py
harcar_catkin_ws/src/record_path_node/launch/: record_path_node.launch
harcar_catkin_ws/src/teleop_node/: CMakeLists.txt  package.xml  setup.py  teleop_node.py
harcar_catkin_ws/src/teleop_node/launch/: teleop_node.launch
path_data/ReachPathData/solution_201806021429_LLH_Reach1/: solution_201806021429.LLH
path_data/figure_8/: Figure8_spaced30.csv
rosbags/: 2018-09-08-22-22-14.bag  2018-09-09-20-04-59.bag  2018-09-15-17-00-12.bag
~archive/: Spaced10Reader.py  pwm.py  pwmDriver.py  pwmDriverNoPygame.py
~documents/: ROS-HOST-README.txt  latlong_to_meter_conversions.xlsx  motion_measurements.xlsx
